début du vertical stepper

--- a/Web/web-app/src/assets/styles/styles.css
+++ b/Web/web-app/src/assets/styles/styles.css
@@ -1,6 +1,7 @@
 .header {
     background-color: transparent;
-    text-align: center;
+    display: flex;
+    justify-content: center;
     padding: 10px 0;
   }
   
@@ -9,7 +10,7 @@
     font-size: 1.5em; /* Taille du texte */
     font-family: Arial, sans-serif; /* Police simple */
     color: #333; /* Couleur du texte */
-    text-decoration: none; /* Enlever le soulignement des liens */
+    text-decoration: none;
   }
   
   .nav-link:hover {
