--- a/Web/web-app/src/assets/styles/homePage.css
+++ b/Web/web-app/src/assets/styles/homePage.css
@@ -9,10 +9,15 @@
   }
   
   .step {
-    height: 100vh;
+    height: 95vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+  }
+
+  .step-icon {
+    width: 35px !important;
+    height: 35px !important;
   }
 
   .step-navigation-left {
@@ -34,10 +39,35 @@
   }
   
   .step-text {
-    transition: transform 0.3s ease;
+    transition: transform 0.5s ease;
   }
   
   .step-text:hover {
     transform: scale(1.05);
   }
+
+  .scroll-to-top {
+    position: fixed !important;
+    left: 20px;
+    bottom: 20px;
+    background-color: rgba(0, 0, 0, 0.7) !important;
+    border-radius: 50%!important;
+    color: white !important;
+    padding: 10px!important;
+    transition: transform 0.5s ease!important;
+  }
+
+  .scroll-to-top:hover {
+    transform: scale(1.1) !important;
+  }
+
+  .step-arrow {
+    transition: transform 0.5s ease!important;
+  }
+
+  .step-arrow:hover {
+    transform: scale(1.15);
+  }
+  
+  
   
