--- a/Web/web-app/src/assets/styles/homePage.css
+++ b/Web/web-app/src/assets/styles/homePage.css
@@ -11,29 +11,29 @@
   .stepper-container {
     width: 100%;
   }
-  
-  .step {
-    height: 95vh;
-    display: flex;
-    align-items: center;
-    width: 100%;
-    position: relative;
-    z-index: 1;
-  }
-  
-    @media screen and (max-width: 1600px) {
-      .step:not(:last-child)::after {
-        z-index: -1;
-        content: '';
-        position: absolute;
-        left: 49.45%;
-        top: 50%;
-        width: 10px;
-        height: 760px;
-        background-color: grey;
-      }
-    }
 
+  @media screen and (max-width: 810px) {
+    .step:not(:last-child)::after {
+      z-index: -1;
+      content: '';
+      position: absolute;
+      left: 49.45%;
+      top: 50%;
+      width: 10px;
+      height: 900px;
+      background-color: grey;
+    }
+    .step {
+      height: 50vh;
+      display: flex;
+      align-items: center;
+      width: 100%;
+      position: relative;
+      z-index: 1;
+    }
+  }
+
+  
     @media screen and (min-width: 1600px) {
       .step:not(:last-child)::after {
         z-index: -1;
@@ -45,8 +45,39 @@
         height: 950px;
         background-color: grey;
       }
+      .step {
+        height: 95vh;
+        display: flex;
+        align-items: center;
+        width: 100%;
+        position: relative;
+        z-index: 1;
+      }
     }
 
+    @media screen and (max-width: 1600px) and (min-width: 810px ) {
+      .step:not(:last-child)::after {
+        z-index: -1;
+        content: '';
+        position: absolute;
+        left: 49.45%;
+        top: 50%;
+        width: 10px;
+        height: 760px;
+        background-color: grey;
+      }
+      .step {
+        height: 95vh;
+        display: flex;
+        align-items: center;
+        width: 100%;
+        position: relative;
+        z-index: 1;
+      }
+    }
+
+
+    
   .step-icon {
     text-align: center;
     width: 50px !important;
@@ -102,6 +133,7 @@
     color: white !important;
     padding: 10px!important;
     transition: transform 0.5s ease!important;
+    z-index: 3;
   }
 
   .scroll-to-top:hover {
