--- a/Web/web-app/src/assets/styles/imageComponent.css
+++ b/Web/web-app/src/assets/styles/imageComponent.css
@@ -6,6 +6,39 @@
   cursor: pointer;
   transition: transform 0.5s ease;
 }
+@media screen and (max-width: 1600px) {
+  .image-container {
+    width: 200px;
+    height: 100px;
+    border-radius: 15px;
+    overflow: hidden;
+    cursor: pointer;
+    transition: transform 0.5s ease;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .image-container {
+    width: 200px;
+    height: 100px;
+    border-radius: 15px;
+    overflow: hidden;
+    cursor: pointer;
+    transition: transform 0.5s ease;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .image-container {
+    width: 400px;
+    height: 200px;
+    border-radius: 15px;
+    overflow: hidden;
+    cursor: pointer;
+    transition: transform 0.5s ease;
+  }
+}
+
 
 .image-container:hover {
   transform: scale(1.1);
