--- a/Web/web-app/src/assets/styles/boxbox.css
+++ b/Web/web-app/src/assets/styles/boxbox.css
@@ -4,6 +4,9 @@
     background-color: rgb(0, 0, 0);
     border: 0.5em solid;
     border-color: black;
+    position: absolute;
+    left: 0px;
+    margin-top: 150px;
 }
 .divImg1 {
     float: left;
@@ -42,3 +45,6 @@
     margin-left: 8.5em;
     z-index: 100 !important;
   }
+.butSuivant{
+    position: absolute;
+}
