--- a/Web/web-app/src/assets/styles/vraiOuFaux.css
+++ b/Web/web-app/src/assets/styles/vraiOuFaux.css
@@ -5,6 +5,9 @@
     border: 0.5em solid;
     border-color: black;
     text-align: center;
+    position: absolute;
+    left: 0px;
+    margin-top: 700px;
 }
 .child {
     display: inline-block;
@@ -29,4 +32,7 @@
     height: 14em;
     /* border: 0.5em solid;
     border-color: black; */
+}
+.butVF{
+    position: absolute;
 }
